--- a/config/_staging.config.yml
+++ b/config/_staging.config.yml
@@ -43,7 +43,7 @@ static: /beta/static
 media: /beta/media
 api: /api
 
-nominate: true # Bool false = closed | true = open
+nominate: false # Bool false = closed | true = open
 
 ## Analytics
 
